added routes and common section component

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
   <script src="/js/jquery-1.11.0.js"></script>
   <script src="/js/waypoints.min.js"></script>
   <script src="/js/jquery.counterup.min.js"></script>
-  <script src="/js/gmap3.js"></script>
+  <!-- <script src="/js/gmap3.js"></script> -->
   <script src="/js/excanvas.compiled.js"></script>
   <script src="/js/jquery.nav.js"></script>
   <script src="/js/diamonds.js"></script>
