--- a/src/index.html
+++ b/src/index.html
@@ -32,17 +32,16 @@
   <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5" />
   <meta name="theme-color" content="#ffffff" />
   <!--favicon-->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 </head>
 
-<body data-spy="scroll" class="loaded mat-typography">
+<body data-spy="scroll" class="">
   <app-root></app-root>
 
   <script src="/js/jquery-1.11.0.js"></script>
   <script src="/js/waypoints.min.js"></script>
   <script src="/js/jquery.counterup.min.js"></script>
-  <!-- <script src="/js/gmap3.js"></script> -->
   <script src="/js/excanvas.compiled.js"></script>
   <script src="/js/jquery.nav.js"></script>
   <script src="/js/diamonds.js"></script>
@@ -62,17 +61,21 @@
   <script src="/js/twitter/jquery.tweet.js"></script>
   <script src="/js/jquery.sticky.js"></script>
   <script src="/js/unique.js"></script>
-  <!-- <script src="/js/retina-2.1.2.js"></script> -->
+
   <script src="/js/scrolling-nav.js"></script>
+
+  <script src="/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+  <script src="/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
 
   <!-- <script src="/js/bootstrap-select.js"></script>
+  <script src="/js/gmap3.js"></script>
+  <script src="/js/retina-2.1.2.js"></script>
   <script src="/js/jquery.scrollTo.js"></script>
   <script src="/js/bootstrap-hover-dropdown.js"></script>
-  <script src="/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-  <script src="/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+
   <script src="/js/jquery.easing/jquery.easing.js"></script>
-  <script src="/js/jquery-cookie/jquery-cookie.js"></script>-->
+  <script src="/js/jquery-cookie/jquery-cookie.js"></script> -->
    
   <script type="text/javascript">
     $(document).ready(function () {
